bin_data_macros/tests/ui/missing-argument.stderr
error[E0308]: mismatched types
 --> tests/ui/missing-argument.rs:5:9
  |
5 |         this_field_needs_an_endian: u32,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         |
  |         expected enum `Endian`, found struct `NoEndian`
  |         arguments to this function are incorrect
  |
note: associated function defined here
 --> $WORKSPACE/bin_data/src/data.rs
  |
  |     fn decode_with<R: Read + ?Sized>(reader: &mut R, endian: Self::EndianContext, args: Args) -> Result<Self, DecodeError>;
  |        ^^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/ui/missing-argument.rs:5:9
  |
5 |         this_field_needs_an_endian: u32,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         |
  |         expected enum `Endian`, found struct `NoEndian`
  |         arguments to this method are incorrect
  |
note: associated function defined here
 --> $WORKSPACE/bin_data/src/data.rs
  |
  |     fn encode_with<W: Write + ?Sized>(&self, writer: &mut W, endian: Self::EndianContext, args: Args) -> Result<(), EncodeError>;
  |        ^^^^^^^^^^^
